# discord-bot-assistant

./: .env.dev  .gitignore  Dockerfile  Dockerfile.ollama  README.md  docker-compose.yaml  init_ollama.sh  main.py  news_api.py  pyproject.toml  responses.py
utils/: functions.py  news_api.py  ollama.py  responses.py  youtube.py
