[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "dlsptm",email = "a@a.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "discord (>=2.3.2,<3.0.0)",
    "newsapi-python (>=0.2.7,<0.3.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
