[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "dlsptm",email = "a@a.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "newsapi-python (>=0.2.7,<0.3.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytz (>=2025.2,<2026.0)",
    "discord (>=2.3.2,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
